# PulseEntrain

./: .gitignore  README.md  main.py
.claude/: launch.json
desktop/: README.md  admin_ui.py  main.py  pyproject.toml
desktop/engine/: README.md  __init__.py  binaural_decompose.py  server.py  synth.py
docs/: FIELD_MEDITATION.md  FIELD_MODE_PLAN.md  LIGHTPAD_DISPLAY_PROTOCOL.md  LUMENATE_NOVA_PROTOCOL.md  LUMI_PROTOCOL.md  ON_DEVICE_AI.md  SESSION_FORMAT.md  session.schema.json
mobile/: .gitignore  App.js  README.md  app.json  index.js  metro.config.cjs  metro.config.js  nova_probe.py  package.json  react-native.config.cjs  start.sh  tsconfig.json  vite.config.ts  zapstore.yaml
mobile/android/: settings.gradle
mobile/android/app/: build.gradle
mobile/app/: _layout.tsx  about.tsx  ai.tsx  field.tsx  index.tsx  manual.tsx  routes.d.ts  springboard.tsx  studio.tsx
mobile/app/category/: [category].tsx
mobile/app/dose/: [id].tsx
mobile/app/player/: [id].tsx
mobile/ios/: Podfile
mobile/ios/PulseEntrain/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard  OnDeviceAI.m  OnDeviceAI.swift  PulseEntrain-Bridging-Header.h
mobile/ios/PulseEntrain.xcodeproj/: project.pbxproj
mobile/ios/PulseEntrain.xcworkspace/: contents.xcworkspacedata
mobile/patches/: react-native-audio-api+0.12.2.patch
mobile/scripts/: sync-catalog.cjs  sync-catalog.js
mobile/src/: Providers.tsx  nativeOnly.js  oneNav.js  theme.js
mobile/web-stubs/: async-storage.js  audio-api.js  ble-plx.js  health.js  keep-awake.js  permissions.js  screens.js  slider.js  track-player.js
(+85 files in other folders)
